--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,4 +11,10 @@
   <% end %>
 </div>
 
-<%= link_to "New project", new_project_path %>
+<%= link_to "New project", new_project_path if user_signed_in? %>
+
+<br>
+
+<%= link_to "Sign In", new_user_session_path, method: :get unless user_signed_in? %>
+<%= link_to "Sign Up", new_user_registration_path, method: :get unless user_signed_in? %>
+<%= link_to "Sign Out", destroy_user_session_path, method: :get, data: { turbo: false } if user_signed_in? %>
