--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,6 +15,6 @@
 
 <br>
 
-<%= link_to "Sign In", new_user_session_path, method: :get unless user_signed_in? %>
-<%= link_to "Sign Up", new_user_registration_path, method: :get unless user_signed_in? %>
-<%= link_to "Sign Out", destroy_user_session_path, method: :get, data: { turbo: false } if user_signed_in? %>
+<%= link_to "Log In", new_user_session_path, method: :get unless user_signed_in? %>
+<%= link_to "Register", new_user_registration_path, method: :get unless user_signed_in? %>
+<%= link_to "Log Out", destroy_user_session_path, method: :get, data: { turbo: false } if user_signed_in? %>
