Added project grid display.

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,12 +1,13 @@
-<div id="<%= dom_id project %>">
-  <p>
-    <strong>Title:</strong>
-    <%= project.title %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%= project.description %>
-  </p>
-
+<div class="col-md-4">
+  <div id="<%= dom_id project %>">
+    <div class="h-100 p-5 bg-light border rounded-3">
+      <h2>
+        <%= project.title %>
+      </h2>
+      <p>
+        <%= project.description %>
+        <%= button_to "Show this project", {action: "show", id: project.id}, method: :get, class: "btn btn-outline-secondary" %>
+      </p>
+    </div>
+  </div>
 </div>
