--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-  <%= render "shared/navbar" %>
+    <%= render "shared/navbar" %>
+    <%= render "shared/flash" %>
     <%= yield %>
   </body>
 </html>
