--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,8 @@
-<p style="color: green"><%= notice %></p>
-
 <%= render @project %>
 
 <div>
-  <%= link_to "Edit this project", edit_project_path(@project) %> |
+  <%= link_to "Edit this project", edit_project_path(@project) if user_signed_in? %>
   <%= link_to "Back to projects", projects_path %>
 
-  <%= button_to "Destroy this project", @project, method: :delete %>
+  <%= button_to "Destroy this project", @project, method: :delete if user_signed_in? %>
 </div>
