--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing project</h1>
+<div class="p-5 mt-0 mb-4 bg-light rounded-3">
+  <div class="container-fluid py">
+  <h1 class="display-5 fw-bold">Edit Project</h1>
+    </div>
+    </div>
+    <div class="container py-4">
+    <div class="row align-items-md-stretch text-left">
 
 <%= render "form", project: @project %>
 
-<br>
-
 <div>
-  <%= link_to "Show this project", @project %> |
-  <%= link_to "Back to projects", projects_path %>
+  <%= link_to "Show this project", @project, class: "me-3 link-primary", id: "showProject" %>
+  <%= link_to "Back to projects", projects_path, class: "me-3 link-primary", id: "backToProjects" %>
 </div>
