--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,33 @@
-<h2>Registration</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="p-5 mt-0 mb-4 bg-light rounded-3">
+  <div class="container-fluid py">
+    <h1 class="display-5 fw-bold">Registration</h1>
+    <%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
+      <%= render "users/shared/error_messages", resource: resource %>
+      <div class="mb-3 field">
+        <%= f.label :email, class: "form-label" %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", type: "email", class: "form-control", id: "inputEmail" %>
+      </div>
+      <div class="mb-3 field">
+        <%= f.label :password, for: "inputPassword", class: "form-label" %>
+        <%= f.password_field :password, autocomplete: "new-password", type: "password", class: "form-control", id: "inputPassword" %>
+        <% if @minimum_password_length %>
+        <em id="passwordHelpBlock" class="form-text"><%= @minimum_password_length %> characters minimum</em>
+        <% end %><br />
+      </div>
+      <div class="mb-3 field">
+        <%= f.label :password_confirmation, class: "form-label" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", type: "password", class: "form-control", id: "inputPasswordConfirmation" %>
+      </div>
+      <% if devise_mapping.rememberable? %>
+        <div class="mb-3 field">
+          <%= f.check_box :remember_me, type: "checkbox", class: "form-check-input", id: "check" %>
+          <%= f.label :remember_me, class: "ms-2 form-label" %>
+        </div>
+      <% end %>
+      <div class="actions">
+        <%= f.submit "Register", class: "mb-2 btn btn-primary" %>
+      </div>
+    <% end %>
+    <%= render "users/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Register" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
