--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,18 +1,18 @@
 <div class="p-5 mt-0 mb-4 bg-light rounded-3">
   <div class="container-fluid py">
-  <h1 class="display-5 fw-bold">Project Page</h1>
-    </div>
-    </div>
-    <div class="container py-4">
-    <div class="row align-items-md-stretch text-left">
-    <%= render @project %>
+    <h1 class="display-5 fw-bold">Project Page</h1>
+  </div>
+</div>
 
-    <div>
-      <%= link_to "Edit this project", edit_project_path(@project), class: "me-3 link", id: "editProject" if user_signed_in? %>
-      <%= link_to "Back to projects", projects_path, class: "link", id: "backToProjects" %>
-
-      <%= button_to "Destroy this project", @project, method: :delete, class: "my-4 btn btn-dark", id: "destroyProject" if user_signed_in? %>
+<div class="container container-fluid">
+  <div class="row align-items-md-stretch text-left">
+    <div class="col-lg-7 mb-4">
+      <div class="my-3 h-100 p-5 bg-light border rounded-3">
+        <%= render @project %>
+        <%= link_to "Edit this project", edit_project_path(@project), class: "me-3 link", id: "editProject" if user_signed_in? %>
+        <%= link_to "Back to projects", projects_path, class: "link", id: "backToProjects" %>
+        <%= button_to "Destroy this project", @project, method: :delete, class: "my-4 btn btn-primary", id: "destroyProject" if user_signed_in? %>
+      </div>
     </div>
-
   </div>
 </div>
