--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,12 +5,12 @@
   </div>
 </div>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="ms-4 navbar-brand" href="#">
+    <a class="mx-4 navbar-brand" href="#">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/1024px-Ruby_logo.svg.png" alt="" width="35"></a>
     <a class="navbar-brand" href="#">Ruby Portfolio</a>
     <div class="container-fluid">
         <ul class="navbar-nav ml-auto">
-            <li class='nav-item me-1' style="font-size: 1.125rem;"><%= active_link_to 'Home', root_path, class: 'nav-link' %></li>
+            <li class='nav-item me-1' style="font-size: 1.125rem;"><%= active_link_to 'Home', projects_path, class: 'nav-link' %></li>
             <li class='nav-item mx-1' style="font-size: 1.125rem;"><%= active_link_to 'Log In', new_user_session_path, class: 'nav-link' unless user_signed_in? %></li>  
             <li class='nav-item mx-1' style="font-size: 1.125rem;"><%= active_link_to 'Register', new_user_registration_path, class: 'nav-link' unless user_signed_in? %></li>  
             <li class='nav-item mx-1' style="font-size: 1.125rem;"><%= active_link_to 'Log Out', destroy_user_session_path, class: 'nav-link', id: "logOut" if user_signed_in? %></li>  
