--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="p-5 mt-0 mb-4 bg-light rounded-3">
+  <div class="container-fluid py">
+    <h1 class="display-5 fw-bold">Forgot your password?</h1>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+  
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <div class="col-sm-3 mb-3 field">
+  <%= f.label :email, class: "form-label" %><br />
+  <%= f.email_field :email, autocomplete: "new-password", type: "email", class: "form-control", id: "inputEmail" %>
+</div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send reset instructions", class: "mb-2 btn btn-primary" %>
   </div>
 <% end %>
 
 <%= render "users/shared/links" %>
+
+</div>
+</div>
