--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ProjectPortfolio</title>
-    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8" name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
